// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/custom_status/custom_status_emoji should match snapshot 1`] = `
<View
  testID="test.custom_status.custom_status_emoji.calendar"
>
  <Text
    style={
      [
        undefined,
        {
          "color": "#000",
          "fontSize": 16,
        },
      ]
    }
  >
    📆
  </Text>
</View>
`;

exports[`components/custom_status/custom_status_emoji should match snapshot with props 1`] = `
<View
  testID="test.custom_status.custom_status_emoji.calendar"
>
  <Text
    style={
      [
        undefined,
        {
          "color": "#000",
          "fontSize": 34,
        },
      ]
    }
  >
    📆
  </Text>
</View>
`;
